新增视频浏览器服务、视频生成流水线、账号体系及运行配置；同步更新前端页面与数据库脚本